Fix shop panel not showing when cannot afford item

--- a/client/src/components/game/gui/panels/shop/ShopPanel.scss
+++ b/client/src/components/game/gui/panels/shop/ShopPanel.scss
@@ -128,6 +128,10 @@
                             margin-left: 8px;
                             margin-right: 8px;
                             font-size: 22px;
+
+                            &.cannot-afford {
+                                color: $colourDB32Orange;
+                            }
                         }
                     }
                 }
